label_validate/pod.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: myapp-pod
#   labels:
#     foo: bar
# spec:
#   containers:
#   - name: nginx
#     image: nginx


apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        foo: bar
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
