label_validate/policy1.yaml
apiVersion: kyverno.io/v1 
kind: ClusterPolicy
metadata:
  name: require-label-color
spec: 
  validationFailureAction: audit
  rules:
  - name: match-label-color
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "The label `color=orange` is required."
      pattern:
        metadata:
          labels:
            color: orange
